--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
-	"name": "martin-bird",
-	"version": "0.1.0",
-	"private": true,
-	"ignore": [
-		"**/.*",
-		"node_modules",
-		"bower",
-		"test",
-		"tests"
-	],
-	"dependencies": {
-		"normalize.css" : "^3.0.3",
-		"modernizr"  : "^2.8.3"
-	}
+  "name": "martin-bird",
+  "version": "0.1.0",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "normalize.css": "^3.0.3",
+    "modernizr": "^2.8.3",
+    "jquery-backstretch": "backstretch#~2.0.4"
+  }
 }
