--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "normalize.css": "^3.0.3",
     "modernizr": "^2.8.3",
     "jquery-backstretch": "backstretch#~2.0.4"
+  },
+  "resolutions": {
+    "jquery": ">= 2.1.0"
   }
 }
