--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery-backstretch": "backstretch#~2.0.4",
     "isotope": "~2.2.2",
     "isotope-cells-by-row": "~1.1.2",
-    "foundation": "zurb/bower-foundation#~5.5.3"
+    "foundation": "zurb/bower-foundation#~5.5.3",
+    "owl.carousel": "owl-carousel2#~2.0.0-beta.3"
   },
   "resolutions": {
     "jquery": ">= 2.1.0"
